[package]
name = "logria"
version = "0.0.0"
authors = ["Christopher Sardegna <logria@reagentx.net>"]
edition = "2021"
description = "A powerful CLI tool that puts log analytics at your fingertips."
readme = "README.md"
repository = "https://github.com/ReagentX/Logria"
license-file = "LICENSE"
keywords = ["cli", "tui", "logs", "log-parsing", "log-analytics"]
categories = ["command-line-interface", "command-line-utilities"]
exclude = ["/resources", ".github", "docs", "build.sh"]
publish = false

[dependencies]
clap = "2.34.0"
dirs = "4.0.0"
crossterm = "0.22.1"
regex = "1.5.4"
tokio = { version = "1.18.1", features = [
    "process",
    "io-util",
    "rt-multi-thread",
    "macros",
] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.59"
time = { version = "0.3.5", features = ["formatting", "parsing"] }
format_num = "0.1.0"
is_executable = "1.0.1"
